[project]
name = "comfyui-tooling-nodes"
description = "Nodes: Load Image (Base64), Load Mask (Base64), Send Image (WebSocket), Crop Image, Apply Mask to Image. Provides nodes geared towards using ComfyUI as a backend for external tools.\nNOTE: This extension is necessary when using an external tool like [comfyui-capture-inference](https://github.com/minux302/comfyui-capture-inference)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Acly/comfyui-tooling-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-tooling-nodes"
Icon = ""
