[project]
name = "comfyui-tooling-nodes"
description = "Provides nodes and server API extensions geared towards using ComfyUI as a backend for external tools."
version = "1.3.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Acly/comfyui-tooling-nodes"

[tool.black]
line-length = 100
preview = true

[tool.comfy]
PublisherId = "acly"
DisplayName = "comfyui-tooling-nodes"
Icon = ""
